[project]
name = "finanz-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deep-translator>=1.11.4",
    "openai>=2.43.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "yfinance>=1.3.0",
]
